2008-09-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py: Link documentation updated.
	Don't convert functions to Computer instances automatically, but
	provide a conveninence wrapper function 'computer()'.

2008-08-28  Pavel Hanak  <hanak@asellus.cz>

	* pytis/presentation/field.py (PresentedRow.validate): Test unique
	only if value is not None.

2008-08-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py:
	Support for multiple (both columns and rows) return values of SQL functions.

2008-08-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Use pg_has_role SQL function for determing user's PostgreSQL roles.

2008-08-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	When determing user's PostgreSQL roles, add his own role to the list.

2008-08-08  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/dualform.py (MultiBrowseDualForm.filter): New method.

2008-08-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Make run form commands inactive, if
	they refer to an inaccessible binding.

	* pytis/form/dualform.py (MultiSideForm.select_binding): Show an
	error message when the form is not accessible.

	* pytis/form/list.py: Show sideform name in link title with
	'binding' specification.

2008-07-31  Tomas Cerha  <cerha@brailcom.org>

	* pytis/data/dbdata.py: Logging messages translated to English.

	* pytis/data/postgresql.py: Logging messages translated to English.

	* pytis/form/application.py: `select_side_form' -> `select_binding'.

	* pytis/form/dualform.py: `select_side_form' -> `select_binding'.

	* pytis/form/list.py: `select_side_form' -> `select_binding'.

2008-07-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/list.py: Added support for multiform links.

	* pytis/form/application.py (new_record): Pass also `spec_kwargs'.

2008-07-29  Tomas Cerha  <cerha@brailcom.org>
